add PATCH and DELETE HTTP methods

--- a/Views/category_edit.cshtml
+++ b/Views/category_edit.cshtml
@@ -9,6 +9,7 @@
     <hr />
     <h2>Edit category: @Model.GetName()</h2>
     <form action="/category/edit/@Model.GetId()" method="post">
+      <input type="hidden" name="_method" value="PATCH">
       <input name="category-id" type="hidden" value="@Model.GetId()">
       <label for="category-name">Category name</label>
       <input id="category-name" name="category-name" type="text">
