--- a/Views/category_delete.cshtml
+++ b/Views/category_delete.cshtml
@@ -10,6 +10,7 @@
     <h2>Are you sure you want to delete this category and all of its tasks?</h2>
     <h4>@Model.GetName()</h4>
     <form action="/category/delete/@Model.GetId()" method="post">
+      <input type="hidden" name="_method" value="DELETE">
       <button type="submit">Delete</button>
     </form>
     <p><a href="/">Back home</a></p>
